[tool.poetry]
name = "chatrouter"
version = "1.0.4"
description = "router for chatbot"
authors = ["guangrei"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
autopep8 = "^2.0.4"
mypy = "^1.8.0"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
