[tool.poetry]
name = "chatrouter"
version = "1.0.3"
description = "router for chatbot"
authors = ["guangrei"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
types-pytz = "^2024.2.0.20241003"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
mypy = "^1.13.0"
pytz = "^2024.2"
types-setuptools = "^75.6.0.20241126"
aiofiles = "^24.1.0"
types-aiofiles = "^24.1.0.20240626"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
