[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["guangrei"]
license = "mit"
readme = "README.md"
packages = [{include = "telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
chatrouter = "^0.0.3"
bottle = "^0.12.25"
requests = "^2.31.0"
pyTelegramBotAPI = "^4.14.1"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
